[project]
name = "lsv_calibration"
version = "0.1.0"
description = "Local Stochastic Volatility (LSV) Calibration "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "kaleido",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lsv"]